--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,13 @@ dependencies:
   http: ^0.13.4
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
