--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
   json_annotation: ^4.5.0
+  jwt_decode: ^0.3.1
+  shared_preferences: ^2.0.15
+  flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
