--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   jwt_decode: ^0.3.1
   shared_preferences: ^2.0.15
   flutter_secure_storage: ^6.0.0
+  image_picker: ^0.8.5+3
+  push: ^0.1.3
 
 dev_dependencies:
   flutter_test:
